[package]
name = "midi2udp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Transmit MIDI messages over UDP"
authors = ["PARADISO <paradiso@ymail.ne.jp>"]
readme = "README.md"
repository = "https://github.com/PARA-DISO/midi-over-udp"
[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
midir = "0.10.0"
